# mandelbrot

./: .gitignore  LICENSE  README.org  mandelbrot.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
