name:                mandelbrot
version:             0.1.0.0
synopsis:            A program for generating images of the mandelbrot set
homepage:            http://github.com/sholland1/mandelbrot
license:             BSD3
license-file:        LICENSE
author:              Seth Holland
maintainer:          holland_s91@yahoo.com
copyright:           2016 Seth Holland
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , bytestring
                     , JuicyPixels
                     , bmp
                     , directory
  default-language:    Haskell2010

executable mandelbrot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , mandelbrot
                     , gloss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sholland1/mandelbrot
